# ncplugin-template

./: .gitignore  CMakeLists.txt  PkgConfig.cmake.in  README.md  ncplugin_name.txt  ncrystal  pyproject.toml  valgrind-out.txt
.github/workflows/: test.yml
data/: Al_sg225.ncmat  Al_sg225_ver.ncmat  Zr_sg194.ncmat  Zr_sg194_ver.ncmat  ncplugin-CrysText_Al_sg225.ncmat  ncplugin-CrysText_Al_sg225_ver.ncmat  ncplugin-CrysText_Zr_sg194.ncmat  ncplugin-CrysText_Zr_sg194_ver.ncmat  ncplugin-SANSND_nanodiamond.ncmat
include/: NCCrystallineTexture.hh  NCCrystallineTextureFactory.hh  NCLookUpTable.hh  NCLookUpTable.icc  NCPhysicsModel.hh  NCPluginFactory.hh  NCPlugin_PhysicsModel_hh  NCSANSDiluteIsotropicScatter.hh  NCSansHelper.hh  NCSansIQCurve.hh  NCSansIsotropic.hh  NCSansModelPicker.hh
src/: NCCrystallineTexture.cc  NCCrystallineTexture.hh  NCCrystallineTextureFactory.cc  NCLookUpTable.cc  NCPhysicsModel.cc  NCPhysicsModel.hh  NCPluginBoilerPlate.cc  NCPluginData.cc  NCPluginFactory.cc  NCPluginFactory.hh  NCSANSDiluteIsotropicScatter.cc  NCSansHelper.cc  NCSansIQCurve.cc  NCSansIsotropic.cc  NCSansModelPicker.cc  NCTestPlugin.cc
src/sasmodels/: sas_barbell.c  sas_bcc_paracrystal.c  sas_binary_hard_sphere.c  sas_capped_cylinder.c  sas_core_multi_shell.c  sas_core_shell_bicelle.c  sas_core_shell_bicelle_elliptical.c  sas_core_shell_bicelle_elliptical_belt_rough.c  sas_core_shell_cylinder.c  sas_core_shell_ellipsoid.c  sas_core_shell_parallelepiped.c  sas_core_shell_sphere.c  sas_cylinder.c  sas_dab.c  sas_ellipsoid.c  sas_elliptical_cylinder.c  sas_fcc_paracrystal.c  sas_flexible_cylinder.c  sas_flexible_cylinder_elliptical.c  sas_fractal.c  sas_fractal_core_shell.c  sas_fuzzy_sphere.c  sas_gaussian_peak.c  sas_gel_fit.c  sas_guinier.c  sas_hardsphere.c  sas_hayter_msa.c  sas_hollow_cylinder.c  sas_hollow_rectangular_prism.c  sas_hollow_rectangular_prism_thin_walls.c  sas_lamellar_hg.c  sas_lamellar_hg_stack_caille.c  sas_lamellar_stack_caille.c  sas_lamellar_stack_paracrystal.c  sas_linear_pearls.c  sas_lorentz.c  sas_mass_fractal.c  sas_mass_surface_fractal.c  sas_mono_gauss_coil.c  sas_multilayer_vesicle.c  (+19 more)
testcode/: CMakeLists.txt  Sampled_that_HSFBA.eps  log.txt  tester.ipynb
testcode/.ipynb_checkpoints/: tester-checkpoint.ipynb
testcode/app_simpletest/: main.cc
testcode/data/: C_sg227_Diamond_hs.ncmat  Ersez_data_corr  Ersez_data_corr_small_range  Ersez_data_corr_wError  Ersez_dataset  Iq_comparison_HSFBA.eps  Teshi_fit.ipynb  aleksenskii_R_dist  ambient_air.ncmat  ang_prob.gnumeric  custom.ncmat  nanodiamond_SANSND.ncmat  ncplugin-SANSND_nanodiamond.ncmat  nesvi.gnumeric  teshi_R_dist  teshi_xs  theoretical_theta_25AA  theoretical_theta_50AA  theta_HSFBA_1AA_50AA  theta_HSFBA_4AA_25AA  theta_HSFBA_4AA_500AA  theta_HSFBA_4AA_50AA  theta_HSFBA_50AA_25AA  theta_HSFBA_50AA_500AA  xs_benchmark_all.eps
testcode/data/.ipynb_checkpoints/: Teshi_fit-checkpoint.ipynb  ncplugin-SANSND_nanodiamond-checkpoint.ncmat
testcode/data/plots/: GPF_xs.eps  Iq_comparison_HSFBA.eps  PPF_fit.eps  PPF_xs.eps  Teshi_GP_and_PL.eps  xs_benchmark_all.eps
testcode/img/: Residual.eps  Residual_std.eps  Residual_stdsans.eps  benchmark.eps
testcode/include/: NCExtraTestUtils.hh
testcode/python/: __init__.py  cbindings.py
testcode/python/.ipynb_checkpoints/: cbindings-checkpoint.py
testcode/scripts/: dumpexample  plotscat  plotscat_multiple.py  plotviancrystal  plotxs
testcode/scripts/.ipynb_checkpoints/: plotradicand-checkpoint.py  plotscat-checkpoint  plotscat_multiple-checkpoint.py
testcode/src/: NCExtraTestUtils.cc  NCForPython.cc
testcode/utils/: bootstrap.sh  installncrystal.x  validateprereqs.py
